--- a/biome.json
+++ b/biome.json
@@ -7,8 +7,7 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": [],
-		"include": ["./src/**/*"]
+		"ignore": [".wxt/**/*", "./node_odules/**/*"]
 	},
 	"formatter": {
 		"enabled": true,
