--- a/package.json
+++ b/package.json
@@ -16,8 +16,19 @@
 		"postinstall": "wxt prepare"
 	},
 	"dependencies": {
+		"@mozilla/readability": "^0.5.0",
+		"@radix-ui/react-alert-dialog": "^1.1.4",
+		"@radix-ui/react-collapsible": "^1.1.2",
+		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-label": "^2.1.1",
+		"@radix-ui/react-progress": "^1.1.1",
+		"@radix-ui/react-select": "^2.1.4",
+		"@radix-ui/react-separator": "^1.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"@radix-ui/react-tooltip": "^1.1.6",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"turndown": "^7.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
