--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
 	"tsx": true,
 	"tailwind": {
 		"config": "tailwind.config.js",
-		"css": "src/index.css",
+		"css": "assets/tailwind.css",
 		"baseColor": "zinc",
 		"cssVariables": true,
 		"prefix": ""
