--- a/package.json
+++ b/package.json
@@ -26,19 +26,29 @@
 		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.6",
+		"lucide-react": "^0.473.0",
+		"@wxt-dev/i18n": "^0.2.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-hotkeys-hook": "^4.6.1",
 		"turndown": "^7.2.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/chrome": "^0.0.280",
+		"@types/node": "^22.10.7",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
+		"@types/turndown": "^5.0.5",
+		"@wxt-dev/auto-icons": "^1.0.2",
 		"@wxt-dev/module-react": "^1.1.2",
 		"autoprefixer": "^10.4.20",
-		"postcss": "^8.4.49",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"postcss": "^8.5.1",
+		"tailwind-merge": "^2.6.0",
 		"tailwindcss": "^3.4.17",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.3",
 		"wxt": "^0.19.13"
 	}
