--- a/components.json
+++ b/components.json
@@ -4,8 +4,8 @@
 	"rsc": false,
 	"tsx": true,
 	"tailwind": {
-		"config": "tailwind.config.js",
-		"css": "assets/tailwind.css",
+		"config": "tailwind.config.ts",
+		"css": "globals.css",
 		"baseColor": "zinc",
 		"cssVariables": true,
 		"prefix": ""
