--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "recally-clipper",
+	"name": "wxt-react-starter",
 	"description": "manifest.json description",
 	"private": true,
 	"version": "0.0.0",
@@ -16,39 +16,34 @@
 		"postinstall": "wxt prepare"
 	},
 	"dependencies": {
+		"@hookform/resolvers": "^3.9.1",
 		"@mozilla/readability": "^0.5.0",
-		"@radix-ui/react-alert-dialog": "^1.1.4",
-		"@radix-ui/react-collapsible": "^1.1.2",
-		"@radix-ui/react-dialog": "^1.1.4",
+		"@radix-ui/react-dropdown-menu": "^2.1.4",
 		"@radix-ui/react-label": "^2.1.1",
-		"@radix-ui/react-progress": "^1.1.1",
 		"@radix-ui/react-select": "^2.1.4",
-		"@radix-ui/react-separator": "^1.1.1",
 		"@radix-ui/react-slot": "^1.1.1",
-		"@radix-ui/react-tooltip": "^1.1.6",
-		"lucide-react": "^0.473.0",
-		"@wxt-dev/i18n": "^0.2.3",
+		"@radix-ui/react-toast": "^1.2.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.469.0",
+		"ofetch": "^1.4.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-hotkeys-hook": "^4.6.1",
-		"turndown": "^7.2.0"
+		"react-hook-form": "^7.54.2",
+		"tailwind-merge": "^2.6.0",
+		"tailwindcss-animate": "^1.0.7",
+		"turndown": "^7.2.0",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
 		"@types/chrome": "^0.0.280",
-		"@types/node": "^22.10.7",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
-		"@types/turndown": "^5.0.5",
-		"@wxt-dev/auto-icons": "^1.0.2",
 		"@wxt-dev/module-react": "^1.1.2",
 		"autoprefixer": "^10.4.20",
-		"class-variance-authority": "^0.7.1",
-		"clsx": "^2.1.1",
-		"postcss": "^8.5.1",
-		"tailwind-merge": "^2.6.0",
+		"postcss": "^8.4.49",
 		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.3",
 		"wxt": "^0.19.13"
 	}
