--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/chrome": "^0.0.280",
 		"@types/react": "^19.0.1",
 		"@types/react-dom": "^19.0.2",
+		"@types/turndown": "^5.0.5",
 		"@wxt-dev/auto-icons": "^1.0.2",
 		"@wxt-dev/module-react": "^1.1.2",
 		"autoprefixer": "^10.4.20",
